--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "use-media": "^1.4.0",
